"change-09-jul-2.10AM"

--- a/web-dev-portfolio/styles/style.css
+++ b/web-dev-portfolio/styles/style.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap");
 
-/* 
- <uniquifier>: Use a unique and descriptive class name
-<weight>: Use a value from 300 to 800 */
+/* Importing the "Open Sans" font from Google Fonts */
+
+/* Font style */
 .open-sans-normal {
   font-family: "Open Sans", sans-serif;
   font-optical-sizing: auto;
@@ -10,35 +10,87 @@
   font-variation-settings: "wdth" 100;
 }
 
-/* shared style  */
+/* Shared styles */
 .text-primary {
-  color: rgb(243, 143, 49);
+  color: rgb(243, 143, 49); /* Primary color for text */
 }
 
 .dark-2 {
-  color: #47234a;
+  color: #47234a; /* Dark color for text */
 }
-/* Nav style  */
+
+/* Nav styles */
 nav {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-}
-
-nav ul li {
-  list-style: none;
-  margin-right: 50px;
-}
-
-nav li a {
-  text-decoration: none;
-  font-size: 20px;
+  align-items: center; /* Flexbox for layout */
 }
 
 nav ul {
   display: flex;
+  align-items: center; /* Flexbox for layout */
 }
+
+nav ul li {
+  list-style: none; /* Removing default list style */
+  margin-right: 50px; /* Spacing between list items */
+}
+
+nav li a {
+  text-decoration: none; /* Removing underline from links */
+  font-size: 20px; /* Font size for links */
+}
+
 .nav-title {
-  font-weight: 800;
-  font-size: 45px;
+  font-weight: 800; /* Bold font weight */
+  font-size: 45px; /* Large font size */
+}
+
+/* Button styles */
+.btn-primary {
+  background-color: rgb(243, 72, 10); /* Primary button color */
+  font-weight: bold; /* Bold font weight */
+  color: white; /* White text color */
+  padding: 18px 35px; /* Padding for buttons */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 20px; /* Font size */
+  border: none; /* Removing border */
+  cursor: pointer; /* Pointer cursor on hover */
+}
+
+/* Banner styles */
+.banner-greetings {
+  font-size: 45px; /* Font size for greetings */
+  font-weight: 600; /* Semi-bold font weight */
+}
+
+.banner-title {
+  font-weight: bold; /* Bold font weight */
+  font-size: 85px; /* Large font size */
+}
+
+.banner-profile-pic {
+  width: 580px; /* Width of profile picture */
+}
+
+.banner {
+  display: flex;
+  justify-content: space-between; /* Flexbox for layout */
+  margin: 0 35px 0 230px; /* Margin for banner */
+}
+
+.banner-content {
+  max-width: 580px; /* Max width for content */
+}
+
+.banner-description {
+  margin: 20px 0; /* Margin for description */
+}
+
+/* Header */
+.header {
+  background-image: url("../fortfolio-resources/images/header_bg.png"),
+    url("../fortfolio-resources/images/another_image.png"); /* Background images */
+  background-repeat: no-repeat, no-repeat; /* No repeat for background images */
+  background-position: top left, bottom right; /* Positioning of background images */
 }
